--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,3 +53,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+  fonts:
+    - family: PatrickHand
+      fonts:
+        - asset: assets/fonts/PatrickHand-Regular.ttf
